<resources>
    <string name="app_name">WhereIsIt</string>
    <!--main buttons String-->
    <string name="ventBtnTxt">Вытяжная вентиляция</string>
    <string name="shortTermPowerFailureBtnTxt">Кратковременный сбой электроэнергии</string>
    <string name="wiringFluorescentLampsBtnTxt">Схема подключения люминесцентных ламп</string>
    <string name="electricToolBtnTxt">Электрический инструмент</string>
    <string name="switchboardBtnTxt">Электрощитовые</string>
    <!--main buttons String-->

    <!--вентиляция String-->
    <string name="headline1">Вытяжная вентиляция 1-го этажа административного здания</string>>
    <string name="headline2">Шкаф автоматов вкл/выкл вытяжной вентиляции в электрощитовой (комната №54)</string>
    <string name="placeInstallLbl">Место установки:</string>
    <string name="placesLbl">Обсолуживаемые помещения</string>
    <string name="roomsLbl">Место вкл/выкл системы</string>
    <string name="systemName">Обозначение системы</string>

    <string name="ventilationsTechFlowBtnTxt">Вытяжная вентиляция</string>
    <string name="ventilationsFirstFlowBtnTxt">Вытяжная вентиляция (1 этаж)</string>

    <string name="ventTechTitle">ГЛАВНАЯ КНОПКА НА ЩУ №1 В 54 ЩИТОВОЙ</string>
    <string name="ventTechText">
        Включить П-5 (ПРИТОК) И Н-5 в П-39
        Включить В-18 в П-36 (Тех. помещение)
        ПАН №1 и ПАН №2 находятся в Щитовой №54 (первый этаж)
        Я-2 в Щитовой №51 (первый этаж) </string>
    <!--вентиляция String-->

    <!--Кратковременный сбой электроэнергии String-->
    <string name="powerFailureInstruction">
        ИНСТРУКЦИЯ В СЛУЧАЕ КРАТКОВРЕМЕННОГО
        СБОЯ ЭЛЕКТРОЭНЕРГИИ:
        ГЛАВНЫЕ ЩИТОВЫЕ №54 - №47
    </string>
    <string name="powerFailureInstructionP1">
        \t 1. Проверить щит ЩУ-1 в 54 электрощитовой
    </string>
    <string name="powerFailureInstructionP2">
        \t 2. Пройти по кабинетам  на первом этаже и проверить в комнате
            24 - (Я-11, Я-12)
            25 - (Я-8, Я-9)
            13 склад Михельсон - (В-3,В-4)
            51 электрощитовая - (Я-2)
            ВКЛЮЧИТЬ ВСЕ ПЕРЕЧИСЛЕННОЕ

        В комнате 21 - вентиляция (П-1, П-2) и насосы включаются в холодное время или по просьбе руководства.
    </string>
    <string name="powerFailureInstructionP3">
         \t 3. В подвале проверить работу насосов ГВС
            В 65 теплопункте включить насосы.
            В 66 комнате включить (В-17, В-16)
    </string>
    <string name="powerFailureInstructionP4">
        \t 4. Пройти в цокольный этаж и включить вентиляцию в комнате
            П-39 (П-5 и насос)
            В техническом коридоре П-36 (В-18)
    </string>
    <string name="powerFailureInstructionAfterALl">
        ЧЕРЕЗ 1 ЧАС ПОСЛЕ ВКЛЮЧЕНИЯ ВЫШЕИЗЛОЖЕННОГО
        ПРОИЗВЕСТИ ОБХОД ЗДАНИЯ
    </string>
    <string name="powerFailureInstructionPhone">
        «В СЛУЧАЕ ОСЛОЖНЕНИЙ ЗВОНИТЬ ВЕДУЩЕМУ ЭНЕРГЕТИКУ
        ДАНИЛКИНУ А.Д. 8-968-653-67-76 </string>
    <!--Кратковременный сбой электроэнергии String-->

    <!--вентиляция String-Array-->
    <string-array name="systemName">
        <item>Обозначение системы</item>
        <item>В-1 (0,75кВт-380В)</item>
        <item>В-2 (0,75кВт-380В)</item>
        <item>В-3 (0,108кВт-220В)</item>
        <item>В-4 (0,076кВт-220В)</item>
        <item>В-5 (0,37кВт–380В)</item>
        <item>В-6 (0,108кВт-220В)</item>
        <item>В-7 (0,18кВт-220В)</item>
        <item>В-8 (0,108кВт-220В)</item>
        <item>В-9 (0,108кВт-220В)</item>
        <item>В-10 (0,108кВт-220В)</item>
        <item>В-11 (0,108кВт-22-В)</item>
        <item>В-12 (0,108кВт-220В)</item>
    </string-array>

    <string-array name="placeInstall">
        <item>Место установки</item>
        <item>3-Я Раздевалка Помещение сушки</item>
        <item>Гараж</item>
        <item>Склад Михельсон</item>
        <item>Склад Михельсон</item>
        <item>Сушилка 2-ой раздевалки</item>
        <item>Сушилка 4-ой раздевалки</item>
        <item>Сушилка 3-ей раздевалки</item>
        <item>Сушилка 2-ой раздевалки</item>
        <item>Сушилка 1-ой раздевалки</item>
        <item>Гостевой туалет</item>
        <item>Туалет для инвалидов</item>
        <item>Помещение - КАФЕ</item>
    </string-array>

    <string-array name="b1Rooms">
        <item>Обслуживаемые помещения</item>
        <item>Кабинеты: Завуч, Секретарь, Филатов, Отдел кадров, Хореогр. зал, Врач Комната охраны, Кафе, Аксенов, Администратор.</item>
        <item>Гараж льдозаливочных машин</item>
        <item>Комната №17 (Тренерская) Комната №16 (Туалет) Склад завхоза – Склад Михельсон Тренерская</item>
        <item>Комната №17 (Тренерская) Комната №16 (Туалет) Склад завхоза – Склад Михельсон Тренерская</item>
        <item>Сушилки одежды 4-х раздевалок</item>
        <item>3 душевых и туалет 4-ой раздевалки</item>
        <item>3 душевых и туалет 3-ей раздевалки, кухня 25 комнаты, кабинет №24 (завхоз)</item>
        <item>3 душевых и туалет 2-ой раздевалки</item>
        <item>3 душевых и туалет 1-ой раздевалки</item>
        <item>Серверная, комната уборщиц, магазин</item>
        <item>2 туалета (для инвалидов и гостевой)</item>
        <item>Подсобное помещение - КАФЕ</item>
    </string-array>

    <string-array name="b1PlaceOnOffSystem">
        <item>Место вкл/выкл системы</item>
        <item>КАБИНЕТ ЗАВХОЗА</item>
        <item>Гараж</item>
        <item>Склад Михельсон</item>
        <item>Склад Михельсон</item>
        <item>КОМНАТА №25</item>
        <item>КАБИНЕТ №24 (ЗАВХОЗ)</item>
        <item>КАБИНЕТ №24 (ЗАВХОЗ)</item>
        <item>КОМНАТА №25</item>
        <item>КОМНАТА №25</item>
        <item>КОМНАТА УБОРЩИЦ</item>
        <item>КОМНАТА УБОРЩИЦ</item>
        <item>ПОДСОБКА - КАФЕ</item>
    </string-array>
    <!--вентиляция String-Array-->
</resources>
