<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewInstruction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/powerFailureInstruction"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewInstructionP1"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:text="@string/powerFailureInstructionP1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewInstructionP2"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:text="@string/powerFailureInstructionP2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewInstructionP3"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:text="@string/powerFailureInstructionP3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewInstructionP4"
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:text="@string/powerFailureInstructionP4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewInstructionAfterAll"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:text="@string/powerFailureInstructionAfterALl"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewInstructionPhone"
                android:layout_width="match_parent"
                android:layout_height="167dp"
                android:text="@string/powerFailureInstructionPhone"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>