<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/ScrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="7dp">

        <LinearLayout
            android:id="@+id/LinearLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/ventBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:text="@string/ventBtnTxt" />

            <Button
                android:id="@+id/shortTermPowerFailureBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:text="@string/shortTermPowerFailureBtnTxt" />

            <Button
                android:id="@+id/wiringFluorescentLampsBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:text="@string/wiringFluorescentLampsBtnTxt" />

            <Button
                android:id="@+id/electricToolBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:text="@string/electricToolBtnTxt" />

            <Button
                android:id="@+id/switchboardBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:text="@string/switchboardBtnTxt" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>